artichoke-backend/src/sys/ffi.rs

extern "C" {
    pub fn mrb_str_cat_cstr(mrb: *mut mrb_state, str_: mrb_value, ptr: *const ::core::ffi::c_char) -> mrb_value;
}
extern "C" {
    pub fn mrb_str_cat_str(mrb: *mut mrb_state, str_: mrb_value, str2: mrb_value) -> mrb_value;
}
extern "C" {
    pub fn mrb_str_append(mrb: *mut mrb_state, str_: mrb_value, str2: mrb_value) -> mrb_value;
}
extern "C" {
    pub fn mrb_str_cmp(mrb: *mut mrb_state, str1: mrb_value, str2: mrb_value) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn mrb_str_to_cstr(mrb: *mut mrb_state, str_: mrb_value) -> *mut ::core::ffi::c_char;
}
pub type jmp_buf = [::core::ffi::c_int; 37usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mrb_jmpbuf {
    pub impl_: jmp_buf,
}
#[test]
fn bindgen_test_layout_mrb_jmpbuf() {
    const UNINIT: ::core::mem::MaybeUninit<mrb_jmpbuf> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<mrb_jmpbuf>(),
        148usize,
        concat!("Size of: ", stringify!(mrb_jmpbuf))
    );
    assert_eq!(
        ::core::mem::align_of::<mrb_jmpbuf>(),
        4usize,
        concat!("Alignment of ", stringify!(mrb_jmpbuf))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).impl_) as usize - ptr as usize },
        0usize,
        concat!("Offset of field: ", stringify!(mrb_jmpbuf), "::", stringify!(impl_))
    );
}
extern "C" {
    pub fn mrb_const_get(arg1: *mut mrb_state, arg2: mrb_value, arg3: mrb_sym) -> mrb_value;
}
extern "C" {
    pub fn mrb_const_set(arg1: *mut mrb_state, arg2: mrb_value, arg3: mrb_sym, arg4: mrb_value);
}
extern "C" {
    pub fn mrb_const_defined(arg1: *mut mrb_state, arg2: mrb_value, arg3: mrb_sym) -> mrb_bool;
}
extern "C" {
    pub fn mrb_const_remove(arg1: *mut mrb_state, arg2: mrb_value, arg3: mrb_sym);
}
extern "C" {
    pub fn mrb_iv_name_sym_p(mrb: *mut mrb_state, sym: mrb_sym) -> mrb_bool;
}
extern "C" {
    pub fn mrb_iv_name_sym_check(mrb: *mut mrb_state, sym: mrb_sym);
}
extern "C" {
    pub fn mrb_obj_iv_get(mrb: *mut mrb_state, obj: *mut RObject, sym: mrb_sym) -> mrb_value;
}
extern "C" {
    pub fn mrb_obj_iv_set(mrb: *mut mrb_state, obj: *mut RObject, sym: mrb_sym, v: mrb_value);
}
extern "C" {
    pub fn mrb_obj_iv_defined(mrb: *mut mrb_state, obj: *mut RObject, sym: mrb_sym) -> mrb_bool;
}
extern "C" {
    pub fn mrb_iv_get(mrb: *mut mrb_state, obj: mrb_value, sym: mrb_sym) -> mrb_value;
}
extern "C" {
    pub fn mrb_iv_set(mrb: *mut mrb_state, obj: mrb_value, sym: mrb_sym, v: mrb_value);
}
extern "C" {
    pub fn mrb_iv_defined(arg1: *mut mrb_state, arg2: mrb_value, arg3: mrb_sym) -> mrb_bool;
}
extern "C" {
    pub fn mrb_iv_remove(mrb: *mut mrb_state, obj: mrb_value, sym: mrb_sym) -> mrb_value;
}
extern "C" {
    pub fn mrb_iv_copy(mrb: *mut mrb_state, dst: mrb_value, src: mrb_value);
}
extern "C" {
    pub fn mrb_const_defined_at(mrb: *mut mrb_state, mod_: mrb_value, id: mrb_sym) -> mrb_bool;
}
extern "C" {
    pub fn mrb_gv_get(mrb: *mut mrb_state, sym: mrb_sym) -> mrb_value;
}
extern "C" {
    pub fn mrb_gv_set(mrb: *mut mrb_state, sym: mrb_sym, val: mrb_value);
}
extern "C" {
    pub fn mrb_gv_remove(mrb: *mut mrb_state, sym: mrb_sym);
}
extern "C" {
    pub fn mrb_cv_get(mrb: *mut mrb_state, mod_: mrb_value, sym: mrb_sym) -> mrb_value;
}
extern "C" {
    pub fn mrb_mod_cv_set(mrb: *mut mrb_state, c: *mut RClass, sym: mrb_sym, v: mrb_value);
}
extern "C" {
    pub fn mrb_cv_set(mrb: *mut mrb_state, mod_: mrb_value, sym: mrb_sym, v: mrb_value);
}
extern "C" {
    pub fn mrb_cv_defined(mrb: *mut mrb_state, mod_: mrb_value, sym: mrb_sym) -> mrb_bool;
}
pub type mrb_iv_foreach_func = ::core::option::Option<
    unsafe extern "C" fn(
        arg1: *mut mrb_state,
        arg2: mrb_sym,
        arg3: mrb_value,
        arg4: *mut ::core::ffi::c_void,
    ) -> ::core::ffi::c_int,
>;
extern "C" {
    pub fn mrb_iv_foreach(mrb: *mut mrb_state, obj: mrb_value, func: mrb_iv_foreach_func, p: *mut ::core::ffi::c_void);
}
extern "C" {
    pub fn mrb_sys_value_has_method(mrb: *mut mrb_state, value: mrb_value, method: mrb_sym) -> bool;
}
extern "C" {
    pub fn mrb_sys_value_is_nil(value: mrb_value) -> bool;
}
extern "C" {
    pub fn mrb_sys_value_is_false(value: mrb_value) -> bool;
}
extern "C" {
    pub fn mrb_sys_value_is_true(value: mrb_value) -> bool;
}
extern "C" {
    pub fn mrb_sys_range_excl(mrb: *mut mrb_state, value: mrb_value) -> bool;
}
extern "C" {
    pub fn mrb_sys_obj_frozen(mrb: *mut mrb_state, value: mrb_value) -> bool;
}
extern "C" {
    pub fn mrb_sys_fixnum_to_cint(value: mrb_value) -> mrb_int;
}
extern "C" {
    pub fn mrb_sys_float_to_cdouble(value: mrb_value) -> mrb_float;
}
extern "C" {
    pub fn mrb_sys_cptr_ptr(value: mrb_value) -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn mrb_sys_basic_ptr(value: mrb_value) -> *mut RBasic;
}
extern "C" {
    pub fn mrb_sys_obj_ptr(value: mrb_value) -> *mut RObject;
}
extern "C" {
    pub fn mrb_sys_proc_ptr(value: mrb_value) -> *mut RProc;
}
extern "C" {
    pub fn mrb_sys_class_ptr(value: mrb_value) -> *mut RClass;
}
extern "C" {
    pub fn mrb_sys_class_to_rclass(value: mrb_value) -> *mut RClass;
}
extern "C" {
    pub fn mrb_sys_class_of_value(mrb: *mut mrb_state, value: mrb_value) -> *mut RClass;
}
extern "C" {
    pub fn mrb_sys_nil_value() -> mrb_value;
}
extern "C" {
    pub fn mrb_sys_false_value() -> mrb_value;
}
extern "C" {
    pub fn mrb_sys_true_value() -> mrb_value;
}
extern "C" {
    pub fn mrb_sys_fixnum_value(value: mrb_int) -> mrb_value;
}
extern "C" {
    pub fn mrb_sys_float_value(mrb: *mut mrb_state, value: mrb_float) -> mrb_value;
}
extern "C" {
    pub fn mrb_sys_cptr_value(mrb: *mut mrb_state, ptr: *mut ::core::ffi::c_void) -> mrb_value;
}
extern "C" {
    pub fn mrb_sys_obj_value(p: *mut ::core::ffi::c_void) -> mrb_value;
}
extern "C" {
    pub fn mrb_sys_class_value(klass: *mut RClass) -> mrb_value;
}
extern "C" {
    pub fn mrb_sys_module_value(module: *mut RClass) -> mrb_value;
}
extern "C" {
    pub fn mrb_sys_data_value(data: *mut RData) -> mrb_value;
}
extern "C" {
    pub fn mrb_sys_proc_value(mrb: *mut mrb_state, proc_: *mut RProc) -> mrb_value;
}
extern "C" {
    pub fn mrb_sys_new_symbol(id: mrb_sym) -> mrb_value;
}
extern "C" {
    pub fn mrb_sys_set_instance_tt(klass: *mut RClass, type_: mrb_vtype);
}
extern "C" {
    pub fn mrb_sys_data_init(value: *mut mrb_value, ptr: *mut ::core::ffi::c_void, type_: *const mrb_data_type);
}
extern "C" {
    pub fn mrb_sys_raise(mrb: *mut mrb_state, eklass: *const ::core::ffi::c_char, msg: *const ::core::ffi::c_char);
}
extern "C" {
    pub fn mrb_sys_raise_current_exception(mrb: *mut mrb_state);
}
extern "C" {
    pub fn mrb_sys_alloc_rarray(mrb: *mut mrb_state, ptr: *mut mrb_value, len: mrb_int, capa: mrb_int) -> mrb_value;
}
extern "C" {
    pub fn mrb_sys_repack_into_rarray(ptr: *mut mrb_value, len: mrb_int, capa: mrb_int, into: mrb_value);
}
extern "C" {
    pub fn mrb_sys_alloc_rstring(
        mrb: *mut mrb_state,
        ptr: *mut ::core::ffi::c_char,
        len: mrb_int,
        capa: mrb_int,
    ) -> mrb_value;
}
extern "C" {
    pub fn mrb_sys_repack_into_rstring(
        ptr: *mut ::core::ffi::c_char,
        len: mrb_int,
        capa: mrb_int,
        into: mrb_value,
    ) -> *mut RString;
}
extern "C" {
    pub fn mrb_sys_gc_arena_save(mrb: *mut mrb_state) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn mrb_sys_gc_arena_restore(mrb: *mut mrb_state, arena_index: ::core::ffi::c_int);
}
extern "C" {
    pub fn mrb_sys_gc_disable(mrb: *mut mrb_state) -> bool;
}
extern "C" {
    pub fn mrb_sys_gc_enable(mrb: *mut mrb_state) -> bool;
}
extern "C" {
    pub fn mrb_sys_value_is_dead(_mrb: *mut mrb_state, value: mrb_value) -> bool;
}
extern "C" {
    pub fn mrb_sys_gc_live_objects(mrb: *mut mrb_state) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn mrb_sys_safe_gc_mark(mrb: *mut mrb_state, value: mrb_value);
}
extern "C" {
    pub fn mrb_init_mrbgems(mrb: *mut mrb_state);
}
pub type __builtin_va_list = [__va_list_tag; 1usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __va_list_tag {
    pub gp_offset: ::core::ffi::c_uint,
    pub fp_offset: ::core::ffi::c_uint,
    pub overflow_arg_area: *mut ::core::ffi::c_void,
    pub reg_save_area: *mut ::core::ffi::c_void,
}
#[test]
fn bindgen_test_layout___va_list_tag() {
    const UNINIT: ::core::mem::MaybeUninit<__va_list_tag> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<__va_list_tag>(),
        24usize,
        concat!("Size of: ", stringify!(__va_list_tag))
    );
    assert_eq!(
        ::core::mem::align_of::<__va_list_tag>(),
        8usize,
        concat!("Alignment of ", stringify!(__va_list_tag))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).gp_offset) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(gp_offset)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).fp_offset) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(fp_offset)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).overflow_arg_area) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(overflow_arg_area)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).reg_save_area) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(reg_save_area)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct iv_tbl {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mt_tbl {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct parser_lex_strterm {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mrb_irep_debug_info {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct hash_entry {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct hash_table {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mrb_shared_string {
    pub _address: u8,
}
